<resources>
    <string name="app_name">OPUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_qpassword">Password</string>
    <string name="log_in">Log In</string>
    <string name="stringmenuEnglish">English</string>
    <string name="StrinmenuArabic">English</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="change_lang_text">Change language</string>
    <string name="reset_password_toolbartext">Reset Password</string>
    <string name="change_password">Change password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="update_btn">Update</string>
    <string name="notification">Notification</string>
    <string name="let_s_start_with_n_log_in">Let’s start with \n Log In!</string>
    <string name="email">email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="looking_for_candidate">Looking for candidate?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_email_otp_details_text">Enter your email which is connected to your account, we will send a OTP code for verification.</string>
    <string name="mobile_no">Mobile No</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_your_industry">Add your industry</string>
    <string name="select_your_skills">Select Your Skills</string>
    <string name="promote">Promote</string>
    <string name="promote_yourself_enjoy"><![CDATA[Promote yourself & enjoy!]]></string>
    <string name="submit_otp">Submit OTP</string>
    <string name="create_new_password">Create new password</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_location">Your Location</string>
    <string name="gender">Gender</string>
    <string name="create_account">Create Account</string>
    <string name="emty"></string>
    <string name="job_title_or_keyword">Job Tittle Or Keyword\n</string>
    <string name="get_otp">Get OTP</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>

</resources>