<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bagroundcolor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragment.auth.RPgetOTPFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnResetPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/arrow_back_fil"
        android:paddingStart="@dimen/margin_padding16"
        android:layout_marginTop="@dimen/margin_padding20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnResetPassword"
        android:layout_marginTop="@dimen/margin_padding20"
        android:text="@string/reset_password"
        style="@style/TextStyleMedium"
        android:layout_marginStart="@dimen/margin_padding8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_padding16"
        android:layout_marginEnd="@dimen/margin_padding16"
        app:cardCornerRadius="@dimen/margin_padding16"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_padding24"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tvEnterEmail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                style="@style/TextStyleBig20"


                />

            <TextView
                android:id="@+id/tvEnterOtpDetails"
                app:layout_constraintTop_toBottomOf="@id/tvEnterEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_otp_details_text"
                style="@style/TextStyleSmall"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ED_Enter_mail"
                app:layout_constraintTop_toBottomOf="@id/tvEnterOtpDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextStyleMedium14"
                android:inputType="text"
                android:layout_marginTop="@dimen/margin_padding24"
                android:background="@drawable/edittextstaeselector"
                android:paddingStart="@dimen/margin_padding24"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding48"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/LayoutCardBottom"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn_get_OTp"
                android:layout_marginTop="@dimen/margin_padding30"
                android:text="Get OTP"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:background="@drawable/btn_shape_login"
                android:textAllCaps="false"
                android:layout_width="320dp"
                android:layout_height="48dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".42" />

</androidx.constraintlayout.widget.ConstraintLayout>